Add optional support for yaml

--- a/structcfg_derive/Cargo.toml
+++ b/structcfg_derive/Cargo.toml
@@ -6,12 +6,17 @@ edition = "2018"
 license = "MIT"
 
 [dependencies]
-syn = {version = "0.15.26", features = ["extra-traits"]}
+syn = "0.15.26"
 quote = "0.6.11"
 proc-macro2 = "0.4.27"
 maplit = "1.0.1"
 heck = "0.3.1"
 lazy_static = "1.2.0"
+cfg-if = "0.1.6"
+
+[features]
+with-toml = []
+yaml = []
 
 [lib]
 proc-macro = true
