--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,15 @@ authors = ["foldu <foldu@protonmail.com>"]
 edition = "2018"
 license = "MIT"
 
+[features]
+with-toml = ["structcfg_derive/with-toml", "toml"]
+yaml = ["structcfg_derive/yaml", "serde_yaml"]
+
 [dependencies]
-toml = "0.4.10"
 structcfg_derive = { path = "structcfg_derive" }
 lazy_static = "1.2.0"
 directories = "1.0.2"
 serde_derive = "1.0.87"
 serde = "1.0.87"
+serde_yaml = { version = "0.8.8", optional = true }
+toml = { version = "0.4.10", optional = true }
