--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ yaml = ["cfgen_derive/yaml", "serde_yaml"]
 
 [dependencies]
 cfgen_derive = { path = "cfgen_derive" }
-lazy_static = "1.0"
-directories = "1.0"
+once_cell = "0.2"
+directories = "2"
 serde_yaml = { version = "0.8", optional = true }
 toml = { version = "0.5", optional = true }
 tilde-expand = { git = "https://github.com/foldu/tilde-expand", rev = "8963d6673999c1284184ebf97c7be207e7d4b970" }
