--- a/cfgen_derive/Cargo.toml
+++ b/cfgen_derive/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2018"
 license = "MIT"
 
 [dependencies]
-syn = "0.15.26"
-quote = "0.6.11"
-proc-macro2 = "0.4.27"
-maplit = "1.0.1"
+syn = "1"
+quote = "1"
+proc-macro2 = "1"
 heck = "0.3.1"
-lazy_static = "1.2.0"
-cfg-if = "0.1.6"
+once_cell = "0.2"
+cfg-if = "0.1"
+darling = "0.10.0"
 
 [features]
 with-toml = []
