--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,15 @@ license = "MIT"
 default = ["with-toml"]
 with-toml = ["cfgen_derive/with-toml", "toml"]
 yaml = ["cfgen_derive/yaml", "serde_yaml"]
+expandpath = ["tilde-expand"]
 
 [dependencies]
 cfgen_derive = { path = "cfgen_derive" }
-once_cell = "0.2"
+once_cell = { version = "0.2", default-features = false }
 directories = "2"
 serde_yaml = { version = "0.8", optional = true }
 toml = { version = "0.5", optional = true }
-tilde-expand = { git = "https://github.com/foldu/tilde-expand", rev = "8963d6673999c1284184ebf97c7be207e7d4b970" }
+tilde-expand = { git = "https://github.com/foldu/tilde-expand", rev = "8963d6673999c1284184ebf97c7be207e7d4b970", optional = true }
 serde = "1.0"
 
 [dev-dependencies]
