--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,4 @@ tilde-expand = { git = "https://github.com/foldu/tilde-expand", rev = "8963d6673
 serde = "1.0"
 
 [dev-dependencies]
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
