--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,9 @@ jobs:
       - run: cargo build --verbose
       - run: cargo doc --verbose
       - run: cargo test --verbose
+      - run: cargo test --verbose --features with-toml
+      - run: cargo test --verbose --features yaml
+      - run: cargo test --verbose --features yaml,with--toml,expandpath
 
   rustfmt:
     name: Format
